<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_card_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgTime"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="48dp"
            android:contentDescription="@string/nome"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvNomeTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/nome"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgTime"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPontos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/pontos"
            android:textColor="@color/black"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/imgTime"
            app:layout_constraintTop_toBottomOf="@+id/tvNomeTime" />

        <TextView
            android:id="@+id/tvVitorias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/vitorias"
            android:textColor="@color/black"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/imgTime"
            app:layout_constraintTop_toBottomOf="@+id/tvPontos" />

        <TextView
            android:id="@+id/tvEmpates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/empates"
            android:textColor="@color/black"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/imgTime"
            app:layout_constraintTop_toBottomOf="@+id/tvVitorias" />

        <TextView
            android:id="@+id/tvDerrotas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/derrotas"
            android:textColor="@color/black"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/imgTime"
            app:layout_constraintTop_toBottomOf="@+id/tvEmpates" />

        <TextView
            android:id="@+id/tvJogos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/jogos"
            android:textColor="@color/black"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/tvPontos"
            app:layout_constraintTop_toBottomOf="@+id/tvNomeTime" />

        <TextView
            android:id="@+id/tvGolsPro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/gols_pro"
            android:textAlignment="viewEnd"
            android:textColor="@color/black"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/tvVitorias"
            app:layout_constraintTop_toBottomOf="@+id/tvJogos" />

        <TextView
            android:id="@+id/tvGolContra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/gols_contra"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/tvEmpates"
            app:layout_constraintTop_toBottomOf="@+id/tvGolsPro" />

        <TextView
            android:id="@+id/tvSaldo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/saldo_de_gols"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/tvDerrotas"
            app:layout_constraintTop_toBottomOf="@+id/tvGolContra" />

        <TextView
            android:id="@+id/tvPosicao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/posicao"
            android:textColor="@color/black"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:indeterminate="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgTime"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>